--- a/jits_index.html
+++ b/jits_index.html
@@ -1,5 +1,6 @@
 <html>
 <body>
 <H1> Welcome to DevOps Online Hands-on Session </H1>
+  <H2> Jyothishmathi Institute of Technology and Science</H2>
 </body>
 </html>
